--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+* {brder: solid 1px black;
+  font-family: sans-serif;
+  
+  
+}
 
 :root {
   --pale-blue: #99eeff;
@@ -49,7 +54,19 @@ text-align: center;
 background: var(--dark-orange);
 color: var(--pale-blue);
 cursor: pointer;
-font-size: 1.2rem}
+font-size: 1.2rem;
+transition: transform 0.3s;
+}
+
+.spin {
+  animation: spin 0.6s linear;
+}
+
+@keyframes spin {
+  0% { transform: rotateX(0deg); }
+  50% { transform: rotateX(180deg); }
+  100% { transform: rotateX(360deg); }
+}
 
 #flip-btn p {margin-top: 1px }
 
@@ -67,7 +84,21 @@ margin: 0 auto;
 background: var(--dark-orange);
 color: var(--pale-blue);
 cursor: pointer;
-font-size: 1.2rem;}
+font-size: 1.2rem;
+  transition: transform 0.3s;
+}
+
+.rotate {
+  animation: rotate 0.6s linear;
+}
+
+@keyframes rotate {
+  0% { transform: rotateZ(0deg); }
+  50% { transform: rotateZ(180deg); }
+  100% { transform: rotateZ(360deg); }
+}
+
+
 
 #roll-btn p {margin: 10px auto}
 
